# binfuse

./: .gitignore  Cargo.toml  README.md  build.rs  build.zig
src/: lib.rs  main.rs
src/cli/: mod.rs
src/core/: error.rs  mod.rs
src/core/config/: mod.rs  parser.rs
src/core/detect/: assets.rs  component.rs  language.rs  mod.rs  project_type.rs
src/core/zig_ffi/: mod.rs
tests/: build_test.rs  detect_test.rs
zig/: server.zig  wrapper.zig
zig/pack/: elf.zig  macho.zig  mod.zig  pe.zig
